民事訴訟法 1986.4.15

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -1180,9 +1180,13 @@
 
 * 567 公示催告程序，因提出證券或其他原因未為除權判決而終結者，法院應依職權以裁定撤銷禁止支付之命令。禁止支付命令之撤銷，應準用第五百六十一條之規定公告之。
 
-* 568 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，專屬夫或贅夫之妻之住所地或其死亡時住所地之法院管轄。但訴之原因事實發生於夫或贅夫之妻之居所地者，得由各該居所地之法院管轄。夫或贅夫之妻之住所地法院不能行使職權，或在中華民國無住所或其住所不明者，準用第一條第一項後段及第二項之規定。夫或妻為中華民國人，不能依前二項規定定管轄之法院者，由中央政府所在地之法院管轄之。
+* 568 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，專屬夫妻之住所地或夫、妻死亡時住所地之法院管轄。但訴之原因事實發生於夫或妻之居所地者，得由各該居所地之法院管轄。夫妻之住所地法院不能行使職權或在中華民國無住所或其住所不明者，準用第一條第一項後段及第二項之規定。夫或妻為中華民國人，不能依前二項規定，定管轄之法院者，由中央政府所在地之法院管轄。
 
-* 569 由夫或妻起訴者，以其配偶為被告。由第三人起訴者，以夫妻為共同被告。但撤銷婚姻之訴，其夫或妻死亡者，得以生存者為被告。
+> 釋：一、民法第一千零零二條原規定妻以夫之住所為住所，贅夫以妻之住所為住所。修正後增設但書規定約定夫以妻之住所為住所，或妻以贅夫之住所為住所者，從其約定。惟依民法第二十條第二項「一人同時不得有兩住所」之規定，夫妻之住所必屬同一，亦即夫之住所即為妻之住所或妻之住所即為夫之住所，爰將第一項「專屬夫或贅夫之妻之住所地或其死亡時住所地」修正為「專屬夫妻之住所地或夫、妻死亡時住所地」，並將「訴之原因事實發生於夫或贅夫之妻之居所地者」，修正為「訴之原因事實發生於夫或妻之居所地者」，以求簡明。二、第二項「夫或贅夫之妻」修正為「夫妻」，說明同前。
+
+* 569 由夫或妻起訴者，以其配偶為被告。由第三人起訴者，以夫妻為共同被告。但撤銷婚姻之訴，其夫或妻死亡者，得以生存者為被告。以一人同時與二人以上結婚為理由之婚姻無效之訴，由結婚人起訴者，以其餘結婚人為被告；由第三人起訴者，以結婚人全體為共同被告。前項起訴，結婚人一方中有死亡者，以生存之結婚人為被告。
+
+> 釋：一、第一、二項不修正。二、修正後之民法第九百八十八條規定一人同時與二人以上結婚者，無效。此種婚姻無效訴訟之當事人，現行法尚無適當條文，可資適用，且此種訴訟裁判之結果，對於結婚人全體不能有所歧異，必須一同起訴或應訴，爰增設第三、四項。
 
 * 570 未成年之夫或妻，就婚姻無效或確認婚姻不成立之訴，亦有訴訟能力。
 
@@ -1208,7 +1212,9 @@
 
 * 581 婚姻事件之原告，於判決確定前死亡者，有權提起同一訴訟之他人，得於其死亡後三個月內承受訴訟。
 
-* 582 就婚姻無效、撤銷婚姻或確認婚姻成立或不成立之訴所為之判決，對於第三人亦有效力。以重婚為理由提起撤銷婚姻之訴被駁回者，其判決對於當事人之前配偶，以已參加訴訟為限，始有效力。
+* 582 就婚姻無效、撤銷婚姻或確認婚姻成立或不成立之訴所為之判決，對於第三人亦有效力。以重婚為理由，提起婚姻無效之訴被駁回者，其判決對於當事人之前配偶，以已參加訴訟為限，始有效力。
+
+> 釋：一、第一項不修正。二、修正前民法第九百九十二條對於結婚違反第九百八十五條重婚之規定者，僅規定得由利害關係人向法院請求撤銷之。修正後民法第九百八十八條規定結婚違反重婚之規定者無效，並將第九百九十二條刪除，是已不得以重婚為理由提起撤銷婚姻之訴，爰將之修正為「以重婚為理由提起婚姻無效之訴」，以期配合。
 
 * 583 收養無效或撤銷收養，與確認收養關係成立或不成立及終止收養關係之訴，專屬養父母之住所地或其死亡時住所地之法院管轄。
 
@@ -1224,7 +1230,13 @@
 
 * 589 否認或認領子女，與認領無效或撤銷認領之訴，及就母再婚後所生子女確定其父之訴，專屬子女住所地或其死亡時住所地之法院管轄。
 
-* 590 否認子女之訴，夫於法定起訴期間內或期間開始前死亡者，繼承權被侵害之人得提起之。依前項規定起訴者，應自夫死亡時起，於六個月內為之。夫於提起否認子女之訴後死亡者，繼承權被侵害之人得承受其訴訟。
+* 589.1 否認子女之訴，由夫起訴者，以妻及子女為共同被告；由妻起訴者，以夫及子女為共同被告。前項起訴，妻或夫死亡者，以子女為被告。
+
+> 釋：修正後之民法第一千零六十三條第二項規定，夫妻各有獨立提起否認子女之訴之權，但其由一方提起之訴，依民事訴訟法第五百九十六條第一項準用第五百八十二條第一項之規定，其判決效力應及於他方，即等於以一方之行為影響法律賦予他方訴訟權之行使，而子女是否係自夫受胎所生，在法律上對夫或妻均有重大關係，應以夫妻同為該訴訟之當事人，始易發現真實。
+
+* 590 否認子女之訴，夫妻之一方於法定起訴期間內或期間開始前死亡者，繼承權被侵害之人得提起之。依前項規定起訴者，應自被繼承人死亡時起，於六個月內為之。夫妻之一方於提起否認子女之訴後死亡者，繼承權被侵害之人得承受其訴訟。
+
+> 釋：否認子女之訴，民法第一千零六十三條第二項已修正為如夫妻之一方能證明妻非自夫受胎者，均得提起。為配合修正，爰將第一項、第三項「夫」修正為「夫妻之一方」，第二項「夫死亡時起」修正為「被繼承人死亡時起」。
 
 * 591 就母再婚後所生子女確定其父之訴，母之配偶及前配偶互為被告。由子女或母起訴者，以母之配偶及前配偶為共同被告；母之配偶或前配偶死亡者，以生存者為被告。
 
@@ -1236,7 +1248,9 @@
 
 * 595 第五百八十九條及第五百九十二條之訴，法院得斟酌當事人所未提出之事實。前項事實，於裁判前應令當事人有辯論之機會。
 
-* 596 第五百六十八條第一項但書、第二項及第三項，第五百七十一條、第五百七十二條第二項、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴，準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴，準用之。
+* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十二條第二項、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴，準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴，準用之。
+
+> 釋：依修正民法第一千零六十七條規定，非婚生子女或其生母或其他法定代理人均得獨立提起認領子女之訴，如係由生母或其他法定代理人起訴，不論勝訴或敗訴，依本條第一項準用第五百八十二條第一項之規定，其確定判決之效力，亦及於有權提起同一訴訟之非婚生子女，影響修正民法賦與非婚生子女請求認領訴訟權之行使，爰增訂本項但書，以資配合。
 
 * 597 禁治產之聲請，專屬應禁治產人住所地之法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。
 
