非訟事件法 1986.4.22

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -82,7 +82,9 @@
 
 * 41 本法有關法人登記事項，於外國法人之登記準用之。但法令有特別規定者，不在此限。
 
-* 42 民法第一千零零八條所定之登記，由夫或贅夫之妻之住所地法院管轄；不能在住所地為登記或其主要財產在居所地者，得由居所地之法院管轄。不能依前項規定，定管轄之法院者，由中央政府所在地之法院管轄。
+* 42 民法第一千零零八條所定之登記，由夫妻住所地之法院管轄；不能在住所地為登記或其主要財產在居所地者，得由居所地之法院管轄。不能依前項規定，定管轄之法院者，由中央政府所在地之法院管轄。
+
+> 釋：一、民法第一千零零二條原規定妻以夫之住所為住所，贅夫以妻之住所為住所，修正後增設但書規定約定夫以妻之住所為住所，或妻以贅夫之住所為住所者，從其約定。惟依民法第二十條第二項「一人同時不得有兩住所」之規定，夫妻之住所必屬同一，亦即夫之住所即為妻之住所或妻之住所即為夫之住所，爰將本條第一項「由夫或贅夫之妻之住所地法院管轄」修正為「由夫妻住所地之法院管轄」，以求簡明。二、第二項不修正。
 
 * 43 依前條規定為登記之住所或居所有變更時，應於變更後三個月內重為登記；其不重為登記者，前登記簿之登記，因滿三個月而失其效力。
 
@@ -156,15 +158,33 @@
 
 * 74 由法院所選定之監護人，非有左列各款情形之一者，不得辭任：一、滿六十歲者。二、因殘廢、疾病不能執行監護者。三、住所或居所與法院或受監護人所在地隔離，不便執行監護者。四、有其他重大事由者。
 
-* 75 依民法第一千一百三十二條所定為未成年人及禁治產人聲請指定親屬會議會員時，由未成年人或禁治產人住所地法院管轄。前條之規定於前項情形準用之。第一項之聲請，如不合法或無理由者，其費用由聲請人負擔；有理由者，由未成年人或禁治產人負擔。
+* 75 依民法第一千一百三十二條第一項所定為未成年人及禁治產人聲請指定親屬會議會員時，由未成年人或禁治產人住所地之法院管轄。前條之規定於前項情形準用之。民法第一千一百三十二條第二項所定聲請法院處理依法應經親屬會議處理事項事件，依其聲請處理事項之性質，分別由行親權人、未成年人、禁治產人、受扶養權利人、被繼承人或遺囑人住所地之法院管轄。第一項及前項之聲請，如不合法或無理由者，其費用由聲請人負擔；有理由者，由未成年人、禁治產人、行親權人或遺產負擔。
+
+> 釋：一、修正民法第一千一百三十二條增列第二項；爰將本條第一項配合修正，以資肆應。二、第二項不修正。三、依法應經親屬會議處理之事項範圍廣泛，爰增訂第三項依其性質，分別定其管轄法院，以資肆應。四、原第三項關於聲請費用之規定，移列第四項，並就增訂之第三項所定聲請事件，修訂聲請費用之負擔。
+
+* 75.1 民法第一千零七十九條第四項所定聲請認可收養子女，以收養人及被收養人為聲請人。但被收養人未滿七歲，而無法定代理人者，僅以收養人為聲請人。前項聲請認可收養子女事件，由收養人住所地之法院管轄。
+
+> 釋：一、修正民法第一千零七十九條第四項新增：收養子女應聲請法院認可；參酌法院認可收養應行審查之事項，爰增訂本條，規定聲請之當事人，並以收養人住所地之法院，為管轄法院，以利審查。二、如收養人在我國無住所時（例如收養人為久居國外之華僑或為外國人時），則可依非訟事件法第二條定管轄法院。
+
+* 75.2 民法第一千零八十條第五項所定聲請許可終止收養事件，由養子女住所地之法院管轄。
+
+> 釋：一、本條新增。二、修正民法第一千零八十條第五項新增養父母死亡後，養子女不能維持生活而無謀生能力者，得聲請法院許可，終止收養關係，爰增訂本條，以養子女住所地之法院，為管轄法院，俾資配合。
 
 * 76 民法第一千一百五十六條所定繼承之呈報，及第一千一百七十八條所定繼承開始及選定管理人之呈報，由繼承開始時被繼承人住所地法院管轄。呈報書應載明左列事項，由呈報人或其代理人簽名或蓋章：一、呈報人之姓名、性別、年齡、籍貫、職業及住、居所。二、由代理人呈報者，其姓名、性別、年齡、籍貫、職業及住、居所。三、被繼承人之姓名及最後住所。四、呈報之意旨。五、法院。六、年、月、日。
 
 * 77 為遺產聲請指定親屬會議會員時，由繼承開始時被繼承人住所地法院管轄。第七十四條之規定，於前項情形準用之。第一項程序費用，除駁回其聲請，應由聲請人負擔外，由遺產負擔。
 
-* 78 繼承開始，繼承人有無不明，而不能依民法第一千一百七十七條選定遺產管理人時，得由利害關係人聲請法院指定之。本法及民法關於選定遺產管理人之規定，於前項指定遺產管理人準用之。被繼承人之遺產，依法應登記者，其遺產管理人應向該管登記機關登記；解任另選時亦同。
+* 77.1 民法第一千一百七十四條所定拋棄繼承事件，由繼承開始時，被繼承人住所地之法院管轄。
 
-* 79 繼承人因故不能管理遺產，或未委任遺產管理人，被繼承人亦為遺囑指定者，準用前條之規定。前項遺產管理人應於六個月內清償債權，並交付遺贈物，如有賸餘，應提存之；其性質不適於提存者，得於拍賣後提存其價金。
+> 釋：民法第一千一百七十四條第二項修正繼承人拋棄繼承，僅得以書面向法院為之，爰增訂本條，規定管轄法院，以資因應。
+
+* 78 民法第一千一百七十八條第二項所定選任遺產管理人事件，由繼承開始時，被繼承人住所地之法院管轄。本法及民法關於選定遺產管理人之規定，於前項選任遺產管理人準用之。被繼承人之遺產，依法應登記者，其遺產管理人，應向該管登記機關登記；解任另選時亦同。民法第一千一百七十八條之一所定保存遺產事件，由繼承開始時，被繼承人住所地之法院或遺產所在地之法院管轄。
+
+> 釋：一、修正民法第一千一百七十八條第二項非訟事件法原第七十八條第一項，已無重複規定之必要，爰予刪除，並將民法第一千一百七十八條第二項之管轄予以規定，列為第一項。二、第二項「指定遺產管理人」修正為「選任遺產管理人」，以與民法第一千一百七十八條第二項之用語相一致。三、第三項不修正。四、修正民法第一千一百七十八條之一新增：法院得因利害關係人或檢察官之聲請，對於繼承人有無不明之遺產為必要之保存處置，爰增訂第四項規定其管轄法院，以資配合。
+
+* 79 繼承人因故不能管理遺產，或未委任遺產管理人，被繼承人亦無遺囑指定者，得由利害關係人聲請法院選任遺產管理人。前條第二項之規定，於前項選任遺產管理人準用之。第一項遺產管理人，應於六個月內清償債權，並交付遺贈物，如有賸餘，應提存之；其性質不適於提存者，得於拍賣後提存價金。
+
+> 釋：一、原第七十八條第一項既經刪除，已無可能準用，爰依本條立法原意，修正本條第一項文字分開規定為第一、二項。二、原第二項移列為第三項，並將「前項」修正為「第一項」。
 
 * 80 民法第六十條第三項、第一千二百十一條所定遺囑執行人之聲請指定事件，及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第七十七條第三項之規定，於前項情形準用之。
 
