--- a/司法-民事/票據法.md
+++ b/司法-民事/票據法.md
@@ -4,9 +4,9 @@
 
 * 3 稱本票者，謂發票人簽發一定之金額，於指定之到期日，由自己無條件支付與受款人或執票人之票據。
 
-* 4 稱支票者，謂發票人簽發一定之金額，委託銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，於見票時，無條件支付與受款人或執票人之票據。
+* 4 稱支票者，謂發票人簽發一定之金額，委託金融業者於見票時，無條件支付與受款人或執票人之票據。前項所稱金融業者，係指經財政部核准辦理支票存款業務之銀行、信用合作社、農會及漁會。
 
-> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保障執票人之權益。
+> 釋：為配合漁會信用部業務發展及漁民使用支票之必要，宜比照農會辦理支票存款業務之辦法，將漁會支票納入票據法管理，以資因應，爰修正本條，並將支票之受託付款人概稱為金融業，俾資簡明。
 
 * 5 在票據上簽名者，依票上所載文義負責。二人以上共同簽名時，應連帶負責。
 
@@ -332,9 +332,9 @@
 
 * 126 發票人應照支票文義擔保支票之支付。
 
-* 127 支票之付款人，以銀錢業者、信用合作社及經財政部核准辦理支票存款業務之農會為限。
+* 127 支票之付款人，以第四條所定之金融業者為限。
 
-> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保證執票人之權益。
+> 釋：配合第四條文字修正。
 
 * 128 支票限於見票即付，有相反之記載者，其記載無效。支票在票載發票日前，執票人不得為付款之提示。
 
@@ -368,9 +368,9 @@
 
 > 釋：第一項加「簽名」兩字，蓋不簽名則「保付」字樣是否係由付款人記載，即無從確定，自更無法加以責任。新增第四項係將原本法施行法第八條移列，並刪「不適用第十八條」之規定，因支票雖經保付，倘果已滅失，而又不許依公示催告程序為除權判決，則銀行帳目將無法清除，而正當權利人又無法領取款項，殊非立法當初之本旨，因予修正，以資補救。
 
-* 139 支票經在正面畫平行線二道者，付款人僅得對銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，支付票據金額。支票上平行線內記載特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之名稱者，付款人僅得對該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，支付票據金額。但該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會為執票人時，得以其他銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會為被背書人，背書後委託其取款。畫平行線支票之執票人，如非銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會，應將該項支票存入其在銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之帳戶，委託其代為取款。支票上平行線內，記載特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之名稱，應存入其在該特定銀錢業者、信用合作社或經財政部核准辦理支票存款業務之農會之帳戶，委託其代為取款。畫平行線之支票，得由發票人於平行線內記載照付現款或同義字樣，由發票人簽名或蓋章於其旁，支票上有此記載者，視為平行線之撤銷。但支票經背書轉讓者，不在此限。
+* 139 支票經在正面劃平行線二道者，付款人僅得對金融業者支付票據金額。支票上平行線內記載特定金融業者，付款人僅得對特定金融業者支付票據金額。但該特定金融業者為執票人時，得以其他金融業者為被背書人，背書後委託其取款。劃平行線支票之執票人，如非金融業者，應將該項支票存入其在金融業者之帳戶，委託其代為取款。支票上平行線內，記載特定金融業者，應存入其在該特定金融業者之帳戶，委託其代為取款。劃平行線之支票，得由發票人於平行線內記載照付現款或同義字樣，由發票人簽名或蓋章於其旁，支票上有此記載者，視為平行線之撤銷。但支票經背書轉讓者，不在此限。
 
-> 釋：一、六十三年六月農會法修正公布後，農會信用部辦理支票存款，已有法令依據。二、增列：「經核准辦理支票存款業務之農會」，將農會信用部支票列入票據法加以確認，依法加強管理以保障執票人之權益。
+> 釋：配合第四條文字修正。
 
 * 140 違反第一百三十九條之規定而付款者，應負賠償損害之責。但賠償金額不得超過支票金額。
 
@@ -385,6 +385,10 @@
 * 144 第二章第一節第二十五條第二項關於發票人之規定；第二節關於背書之規定，除第三十五條外；第二章第七節關於付款之規定，除第六十九條第一項、第二項、第七十條、第七十二條、第七十六條外；第二章第九節關於追索權之規定，除第八十五條第二項第一款、第二款、第八十七條、第八十八條、第九十七條第一項第二款、第二項及第一百零一條外；第二章第十節關於拒絕證書之規定，除第一百零八條第二項、第一百零九條及第一百十條外；均於支票準用之。
 
 > 釋：因支票具有見票即付性，匯票分期付款之規定，於支票自不適用，故增列排除第六十五條第二項準用之規定。並將「第二十五條第二項」列為準用之一以求周密。
+
+* 144.1 第一百四十一條、第一百四十二條之施行期限至中華民國七十五年十二月三十一日屆滿。在施行期限內之犯罪，仍依行為時法律追訴處罰，不適用刑法第二條之規定。但發票人於辯論終結前清償支票金額之一部或全部者，減輕或免除其刑。
+
+> 釋：一、本條新增。二、現行規定對無詐欺犯意之空頭支票發票人科以刑罰制裁，致債權人樂於收受支票之不正常現象。甚至以遠期支票替代匯票、本票之使用，造成票據犯罪案件之激增。為確實達致支票發票人憑具資金及信用簽發支票之目的，宜將有關規定廢除。三、由於現行刑罰規定行之有年，驟然取銷，可能造成社會經濟重大衝擊，為使國人有相當期間得以瞭解新法內容，從容因應，爰於本條規定第一百四十一條、第一百四十二條之失效日期。惟原日期訂為民國七十四年十二月三十一日，已屬過去，而本院審議期間，曾經大眾傳播工具廣為宣傳，國人對票據法修正內容已有相當瞭解，故其緩衝期間當酌予縮短，較為允當，爰將失效日期修正為七十五年十二月三十一日。四、由於第一百四十一條及第一百四十二條之刪除有刑法第二條之適用，為避免過渡期間產生取巧現象，爰作除外規定，以杜僥倖。五、為緩和支票刑罰廢止前後之重大差異，對於支票發票人於退票後設法清償票款者，亦當兼顧其情，以符廢止支票刑罰之良法美意，爰增列但書規定，以擴大廢止支票刑罰之適用範圍，並兼顧支票執票人之受償機會，發揮廢止支票刑罰之積極意義。
 
 * 145 本法施行細則，由行政院定之。
 
