--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -10,9 +10,9 @@
 
 > 釋：一、比照第一條之修正將「工業上價值」修正為「可供產業上利用具有有價值」。二、「適用」修正為「實用」。
 
-* 4 左列物品不予專利：一、化學品。二、飲食品及嗜好品。三、醫藥品及其調合品。四、發明品之使用違反法律者。五、妨害公共秩序、善良風俗或衛生者。六、糧食新品種。
+* 4 左列各款不予發明專利：一、飲食品及嗜好品。但其製造方法不在此限。二、動、植物及微生物新品種。但植物新品種及微生物新菌種育成方法不在此限。三、人體或動物疾病之診斷、治療或手術方法。四、科學原理或數學方法。五、遊戲及運動之規則或方法。六、其他必須藉助於人類推理力、記憶力始能實施之方法或計畫。七、物品新用途之發現。但化學品及醫藥品不在此限。發明妨害公共秩序、善良風俗或衛生者，或發明品之使用違反法律者，不予專利。
 
-> 釋：第一項序文酌作文字修正。並增訂第六款「糧食新品種」。
+> 釋：本條係基於公眾衛生及公益需要，作不予專利之例外規定。經參酌外國立法例及專利處理實務，並權衡公益，審慎檢討，爰修正如次：一、刪除現行條文第一款及第三款「化學品」、「醫藥品及其調合品」不予專利之規定，以提升國內工業水準。二、飲食品、嗜好品仍不予專利，但其製造方法仍准予專利。並改列為第一款。三、增訂第二款。按對於植物新品種之保護，各國有採以專利或植物新品種登記予以保護者，亦有兼採二種制度而予以保護者，經檢討以納入植物種苗法予以保護為宜。現行第六款「糧食新品種」已涵蓋在「植物新品種」範圍內，爰予刪除。至於「微生物新品種」，則以我國目前尚未達到保護之條件，故增列為不予專利保護之對象。但「植物新品種、微生物菌種」之育成方法尚值鼓勵，仍給予專利。目前世界各國對於「動物新品種」給予專利保護者不多，爰參照外國之法例，亦不予專利。四、增列第三款。蓋此等方法被認為無法供產業上利用，爰予明定避免紛爭。五、增列第四款至第六款。六、物品新用途之發現，雖不應予以專利，但為配合化學品、醫療品之開放專利，及鼓勵化學品、醫藥品新用途之開發研究，爰增列第七款規定。七、由於現行條文第四、五兩款在性質上與修正條文所列各款不同，爰移列為第二項。
 
 * 5 發明於軍事上有秘密之必要者，其應得專利之權利得由政府收用，給以相當之報酬。
 
@@ -32,11 +32,17 @@
 
 * 11 專利局於居住外國及邊遠或交通不便之地者，得依職權或據申請延展其對於專利局應為程序之法定期間。
 
-* 12 申請專利由發明人或其受讓人或繼承人備具申請書、詳細說明書、圖式、模型或樣品及宣誓書向專利局申請之。受讓人或繼承人申請時，應敘明發明人姓名，並附具受讓或繼承之證件。
+* 12 申請專利，由發明人或其受讓人或繼承人備具申請書、說明書、圖式、模型或樣品及宣誓書，向專利局申請之。說明書應載明申請專利範圍。受讓人或繼承人申請時，應敘明發明人姓名，並附具受讓或繼承證件。第五十一條及第五十二條之發明，其專利申請，由各該條所定專利權歸屬者為之。
 
-* 13 發明人申請專利及有關專利事項，得委託代理人辦理之。
+> 釋：一、第一項刪除「詳細」贅字，又申請專利範圍為說明書中最主要且不可缺少之事項，爰於本項後段增訂之。二、第二項未修正。三、關於雇用人與受雇人之專利權歸屬，第五十一條、第五十二條已予明文規定，宜配合增訂雇用人亦具申請權，爰增訂第三項。
 
-* 14 外國人所屬之國家與中華民國如無相互保護專利之條約或協定或依其本國法律對中華民國人民申請專利，不予受理者，其專利之申請，得不予受理。
+* 13 申請人申請專利及辦理有關專利事項，得委託專利代理人辦理之。在中華民國境內，無住所或營業所者，申請專利及辦理專利有關事項，應委任專利代理人辦理之。專利代理人，應在中華民國境內有住所。其資格及管理另以法律定之。
+
+> 釋：一、依第十二條之規定，申請專利不限於發明人，爰將第一項之「發明人」修正為「申請人」，「代理人」修正為「專利代理人」，以符合實際。二、申請專利應以中文為之，且為送達之便利及申請手續之完備，爰參照商標法第八條第二項規定，增訂第二項規定在中華民國境內無住所或營業所者，應委任專利代理人辦理。三、因專利事務涉及專業知識，宜建立專利代理人制度，以提昇申請專利案件之水準，並利專利行政之管理，特增訂第三項，明定其資格及管理，另以法律定之。
+
+* 14 外國人所屬之國家與中華民國如無相互保護專利之條約、協定或由團體、機構互訂經經濟部核准保護專利之協議，或依其本國法律對中華民國國民申請專利，不予受理者，其專利申請，得不予受理。
+
+> 釋：與我國無外交關係之國家，其團體或機構與我國之團體或機構互訂有保護專利之協議，經經濟部核准者，對該外國之人及團體亦應准其依法申請專利，爰參照商標法第六十二條之一第二項規定修正。
 
 * 15 二人以上有同一之發明各別申請時，應就最先申請准予專利，如同日申請，則令申請者協議定之，協議不諧時，均不予專利。
 
@@ -100,11 +106,17 @@
 
 * 41 專利申請權人依本法第二十四條或第二十五條申請之案件，不再公告
 
-* 42 專利權為專利權人專有製造、販賣或使用其發明之權，其發明若為一種方法者，包括以此方法直接製成之物品。
+* 42 專利權為專利權人專有製造、販賣或使用其發明之權。前項發明，若為一種製造方法者，其專利權效力及於以此方法直接製成之物品。但該物品為他人專利者，需經該他人同意，方得實施其發明。前項製造方法發明之實施，足以增進公益，物品專利權人無正當理由拒絕同意，顯有濫用權利情事者，製造方法專利權人得申請專利局核定適當補償條件後，實施其發明。
+
+> 釋：一、將現行條文前段關於專利權之性質及效力，列為第一項。二、將現行條文後段關於製造方法專利權之效力範圍，移列為第二項，並增訂但書規定，用以釐清製造方法專利權與物品專利權二者間之關係。對於後申請製造方法專利之專利權效力，雖可及於物品，惟該物品既已核准他人專利，故後申請製造方法專利者，如欲實施其專利權，理應徵得物品專利權人之同意，以充分保障物品專利權人之權益。三、第三項係新增，用以鼓勵後續新製造方法專利權人之貢獻。四、第三項所謂「補償條件」，包括補償金或同意相互實施，因其牽涉物品專利權人與製造方法專利權人間之權益，及專利案件之高度技術與複雜性，專利局知之較稔，故定由專利局核定。
 
 * 43 前條之規定，於左列各款情事，不適用之：一、為研究或試驗，實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其實施權人，在舉發前，以善意在國內使用或已完成必須之準備者。六、自國外輸入之物品，係原發明人租與或讓與他人實施所產製者。本條第二及第五兩款之使用人，限於在其原有事業內繼續利用。
 
 > 釋：增列第六款。為免專利權人在本國取得專利權後，壟斷市場，對於專有販賣權之保護範圍，應作合理限制，准許他人自國外輸入原發明人租與讓與他人實施所產製之物品，藉以維護本國之經濟利益。
+
+* 43.1 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
+
+> 釋：一、本條新增。二、第四條修正開放「醫藥品」專利後，因醫藥品之專利如屬兩種以上之醫藥品混合製造而具有新藥效之醫藥品，就該醫藥品本身及製造方法均可給予專利，惟該專利權之效力，如及於醫生之處方及依處方調劑之醫藥品時，將妨害醫療行為。爰參照日本、芬蘭立法例增訂本條。
 
 * 44 專利案公告後，暫准發生專利權之效力。前項效力，因申請不合程序作為無效或因異議不予專利視為自始即不存在。
 
@@ -130,19 +142,25 @@
 
 * 55 專利權人因中華民國與外國發生戰事受損失者，得請求延展專利五年或十年，以一次為限。但屬於交戰國人之專利權，不在此限。
 
-* 56 專利權人對於請准專利之說明書及圖式，有左列情事之一時，得向專利局請求更正。但不得變更發明之實質：一、申請範圍之縮減。二、誤記之事實。三、不明瞭之記載。前項更正，專利局於核准後應公告之。
+* 56 專利權人對於請准專利之說明書及圖式，有左列情事之一時，得向專利局請求更正。但不得變更發明之實質：一、申請範圍之縮減。二、誤記之事實。三、不明瞭之記載。前項更正，專利局於核准後，應將其事由刊載專利公報。
+
+> 釋：一、第一項未修正。二、本條第二項之「公告」目的在周知大眾，與第四十四條之「公告」暫准發生專利之效力不同，為區別乃修正第二項。
 
 * 57 專利權人誤將二個以上發明為一個申請得有專利權者，得請求專利局分為各別之專利權。
 
 * 58 專利權人未得附有限制之受讓人、承租人或實施權人之承諾，不得放棄專利權及為前二條之請求。
 
-* 59 有左列情事之一者，專利權當然消滅：一、專利權期滿時自期滿之次日消滅。二、專利權無繼承人時，專利權於專利權人死亡之日消滅。三、專利權人逾應繳專利費之補繳期而仍不繳費時，專利權自原繳費期限屆滿之日消滅。四、專利權人自行放棄時，自其書面表示之日消滅。
+* 59 有左列情事之一者，專利權當然消滅：一、專利權期滿時，自期滿之次日消滅。二、專利權人無繼承人時，專利權於專利權人死亡之日消滅。三、專利權人逾應繳專利年費之補繳期而仍不繳費時，專利權自原繳費期限屆滿之日消滅。四、專利權人自行放棄時，自其書面表示之日消滅。
 
-* 60 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反本法第一條至第四條之規定者。二、專利權人為非專利申請權人者。三、說明書或圖式故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、說明書與曾在外國申請時之說明書內容不同者。五、說明書之記載非發明之真實方法者。
+> 釋：一、按現行條文第三款之專利費係指專利年費，為資明確乃修正之。二、其餘各款未修正。
 
-* 61 前條第二款之舉發，限於有專利申請權人。其他各權，任何人得附具證據向專利局舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一理由，再為舉發。
+* 60 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反第一條至第四條規定者。二、專利權人為非專利申請權人者。三、說明書或圖式故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、說明書之記載非發明之真實方法者。
 
-> 釋：原條文但書異議案不成立之案件，僅限于同一人不得以同一理由再為舉發，而舉發案更無明文限制，以致糾紛不已，對於專利權實欠保障，爰將但書刪除，並增訂第二項。
+> 釋：一、按在我國申請專利之範圍，不需與在外國申請專利範圍一致，仍可擴增、修正或減縮其申請範圍，故其專利說明書之內容不必相同，爰予刪除第四款。二、第一、二、三款未修正，現行第五款移列為第四款。
+
+* 61 前條第二款之舉發，限於有專利申請權人。其他各款，任何人得附具證據向專利局舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一事實及同一證據，再為舉發。
+
+> 釋：一、第一項未修正。二、第二項「同一理由」之定義，在現行專利法施行細則第四十五條已予規定，爰參照商標法第五十一條及第五十九條之立法例，修正為「同一事實及同一證據」以資明確。
 
 * 62 前條舉發案之處理，準用本法關於再審查各條之規定。
 
@@ -150,21 +168,23 @@
 
 * 64 專利權撤銷，其追加專利未撤銷者，視為獨立之專利權，另給證書，至原專利權期滿時為止。
 
-* 65 專利權之核准、消滅或撤銷，專利局應公告之。
+* 65 專利權之核准、變更、撤銷或消滅，專利局應將其事由刊載專利公報。
+
+> 釋：一、現行條文與施行細則第五十二條均規定應「公告」之事項，為免重複，予以合併。二、修正理由同第五十六條說明二。
 
 * 66 專利局應備專利權簿，記載核准專利之發明之名稱、專利期限、專利權人代理人姓名、住址，及其他有關專利之權利與法令所定之一切事項。
 
-* 67 核准專利滿三年，為適當理由未在國內實施或未適當實施其發明者，專利局得依關係人之請求，特許其實施。特許實施人對專利權人應予以補償金，其數額有爭執時，由專利局核定之。專利局接到特許實施申請書後，應將副本發交專利權人，限期在三個月內答辯；逾期不答辯者，得逕行處理。
+* 67 專利權期間逾四年，無正當理由未在國內實施或未適當實施其發明者，專利局得依關係人之請求，特許其實施。專利局接到特許實施申請書後，應將副本發交專利權人，限期在三個月內答辯；逾期不答辯者，得逕行處理。前項特許實施權人對專利權人應予以補償金，有爭執時，由專利局核定之。專利權依第一項規定特許實施後，特許實施權人，除應與特許實施有關之營業一併移轉外，不得允許他人實施。專利權人於專利局第一次特許實施公告之日起逾二年，無正當理由，仍未在國內實施或未適當實施其發明者，專利局得依關係人之請求撤銷其專利權。
 
-> 釋：一、基於市場條件等客觀因素，若干科技上之發明，未必均能於核准專利三年內完成實施，故將本條有關核准專利三年不實施，專利局得「依職權撤銷其專利權」之規定刪除，以加強保護已核准之專利權益。二、專利局依本條核准關係人特許實施之前，應先予專利權人答辯之機會，爰增列第二項規定。三、第一項末句內「定之」修正為「核定之」。
+> 釋：一、現行第一項規定之「核准專利滿三年」其起算與專利期間之生效起算日不一致，爰予修正，並酌予延長期間為四年；並將第一項後段移列為第二項，現行第二項則列為第一項後段。二、第三項新增。現行規定之特許實施權，應解釋為通常實施權，不具排他性，並參照巴黎公約之規定，增列第三項實施權讓與等之規定，以利適用。三、第四項新增。為避免第四條修正開放化學品、醫藥品之專利後，造成壟斷現象，並配合巴黎公約第五條之一第一項第三款之規定，爰增列第四項。
 
 * 68 有左列情事之一者，認為未適當實施：一、專利權人以其發明全部或大部分在國外製造，輸入國內者。二、利用他人發明為再發明之專利權人，非實施原發明人之發明，不能實施其再發明；而原發明之專利權人，在合理之條件下拒絕租與再發明人實施者。三、在國外輸入零件，僅在國內施工裝配者。
 
 > 釋：一、近年來，華僑或外國人在國內投資設廠案件增多，其產品有限制必須全部外銷者，故專利產品，應不限在國內銷售使用之必要，復以是否大規模製造，認定殊感不易，且本法第七十條已規定，核准專利之發明品，足以代替國內最需要之物品，如經適當實施製造，仍不能充分供給時，專利局得限期令其擴充製造，逾期得取銷其專利權，故現行第一款已無必要，爰予刪除。二、第一款「完全」修正為「全部」。
 
-* 69 核准專利之發明品，足以代替國內最需要之物品，雖經適當實施製造，仍不能充分供應時，專利局得規定期限令其擴充製造；逾期未擴充製造者，得依關係人之請求特許其實施，特許實施人對專利權人應予以補償金，其數額有爭執時，由專利局核定之。專利局對特許實施之處理程序，比照第六十七條第二項特許實施程序辦理。第一項之擴充期限，得因專利權人之請求，酌予延長。
+* 69 核准專利之發明品，足以代替國內最需要之物品，雖經適當實施製造，仍不能充分供應時，專利局得規定期限令其擴充製造；逾期未擴充製造者，得依關係人之請求，特許其實施。前項擴充期限，得因專利權人之請求，酌予延長。第一項特許實施，準用第六十七條第一項至第三項規定。
 
-> 釋：一、刪除逾期未擴充製造得取銷其專利權之規定，改為特許實施，其處理程序比照第六十七條第二項辦理。二、本條改採特許實施，原法第六十九條應配合修改，並變動其條次。
+> 釋：配合第六十七條而修正第一、二項，並將原條文第二、三項對調。
 
 * 70 依第六十七條、第六十九條取得特許實施權人不適當實施時，專利局得依關係人之請求或依職權撤銷其特許實施權。
 
@@ -180,13 +200,13 @@
 
 * 74 專利權人登載廣告，不得逾越申請專利之範圍；非專利物品或非專利方法所製物品，不得附加請准專利字樣，或足以使人誤認為請准專利之標記。
 
-* 75 關於專利之各項申請，申請人於申請時，應繳申請費。核准專利者，專利權人應繳證書費及年費，請准延展專利者，在延展期內，仍應繳年費。申請費、證書費及年費之金額，由行政院定之。
+* 75 關於專利之各項申請，申請人於申請時，應繳申請費。核准專利者，專利權人應繳證書費及專利年費；請准延展專利者，在延展期內，仍應繳專利年費。申請費、證書費及專利年費之金額，由行政院定之。
 
-> 釋：查現行專利法有關申請專利應納各費之金額，係分別規定於專利法及其施行細則中，時逾數十年，未經調整，原訂額度偏低，已難配合實際需要，爰本應納各費由行政院定之之旨，將第七十五條、第七十七條、第八十條及第一百零五條、第一百二十四條有關應納各費，參照商標法第十六條之例，合併修正之。
+> 釋：一、第一項未修正。二、配合修正條文第五十九條第三款之用語，將第二項及第三項之「年費」均修正為「專利年費」。
 
-* 76 核准專利之發明，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後應於屆期前繳納之。
+* 76 專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納，第二年以後應於屆期前繳納之。
 
-> 釋：一、專利年費之金額，已併定於修正條文第七十五條，第一項爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際，爰就第二項作修正。
+> 釋：配合目前實務處理需要，對於第一年年費之繳納，規定應由專利局通知申請人限期繳納，爰將現行施行細則第五十四條規定，納入本條以資明確。
 
 * 77 （刪除）
 
@@ -204,7 +224,9 @@
 
 * 81 專利權受侵害時，專利權人，或實施權人，或承租人，得請求停止侵害之行為賠償損害或提起訴訟。
 
-* 82 法院對於前條損害數額，得請專利局代為估計。
+* 82 依前條請求賠償損害時，得就左列各款擇一計算其損害：一、依民法第二百十六條之規定。但不能提供證據方法以證明其損害時，專利權人得就其實施專利權通常所可獲得之利益，減除受害後實施同一專利權所得之利益，以其差額為所受損害。二、依侵害人因侵害行為所得之利益。於侵害人不能就其成本或必要費用舉證時，以銷售該項物品全部收入為所得利益。三、法院囑託專利局代為估計之數額。除前項規定外，專利權人之業務上信譽，因侵害而致減損時，得另請求賠償相當金額。
+
+> 釋：一、參照七十四年十一月二十九日修正公布之商標法第六十四條，增訂第一、二款計算損害數額之方法，以供專利權人擇一作有利之選擇。二、專利權人遭受他人侵害時，財產上之損害，可依第一項規定辦理，但專利權人業務上信譽之減損，其性質屬於非財產之損害。故增訂第二項，規定亦得請求相當之賠償。
 
 * 83 用作侵害他人專利權行為之物，或由其行為所生之物，得以被侵害人之請求施行假扣押，於判決賠償後作為賠償金之全部或一部。
 
@@ -212,27 +234,41 @@
 
 * 85 法院受理專利訴訟案件，得向專利局諮詢意見，或調閱文卷，或通知派員到庭說明。
 
+* 85.1 物品與他人製造方法專利所製成之物品相同者，推定為以該專利方法所製造。但物品在專利前已為國內外所公知者，不在此限。前項推定之規定，於物品係自國外輸入而能指證確實之製造及供應商者，不適用之。
+
+> 釋：一、本條新增。二、按專利之發明係物品之製造方法者，尤其是化學品、醫藥品等之製造方法，如受侵害時，舉證侵害人係以同一方法製造甚為困難，無異助長仿冒，爰增訂本條第一項規定，課物品製成人以舉證責任，惟若該物品於申請前已為國內外所共知者，則仍應由專利權人舉證。三、物品如屬自國外輸入而能指證確實之製造及供應商者，參照民事訴訟法第二百八十一條已屬有反證，當不適用第一項推定之規定，爰予第二項予以明定。
+
 * 86 專利訴訟案件判決後，法院應以判決書副本送專利局。
 
 * 87 被侵害人得於判決後，聲請法院將判決書全部或一部登報，其費用由敗訴人負擔。
 
-* 88 關於專利權之民事或刑事訴訟，在申請案、異議案、撤銷案未確定以前，法院應中止其程序。
+* 88 關於專利權之民事或刑事訴訟，在申請案、異議案、舉發案、撤銷案未確定以前，法院得停止其程序。
 
-* 89 偽造有專利權之發明品者，處三年以下有期徒刑、拘役或科或併科四萬元以下罰金。
+> 釋：現行條文所定「應中止其程序」，對專利訴訟案件易造成異議人或舉發人不提出異議或舉發，而影響專利權人已獲准之專利權之效力，故修正「應中止其程序為「得停止其程序」，俾得由法院視個案情形斟酌處理。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「五千元以下」，提高為四萬元。
+* 88.1 未經認許之外國法人或團體就本法規定事項得為告訴、自訴或提起民事訴訟。但以條約或其本國法令、慣例，中華民國國民或團體得在該國享受同等權利者為限。其由團體或機構互訂保護專利之協議，經經濟部核准者，亦同。
 
-* 90 仿造有專利權之發明品或竊用其方法者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
+> 釋：一、本條新增。二、按現行專利法規定外國人得申請專利包括外國法人或團體，在實務上並不需先依法認許後再行申請專利，其專利既經依法核准，在實體上即已取得專利權，若不同時賦予訴權，將導致專利權保護之缺陷，故為符專利法之基本精神，爰參照商標法第六十二條之一及第六十六條之一增訂本條。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「三千元以下」，提高為「一萬元以下」。
+* 88.2 法院為處理專利訴訟案件，得設立專業法庭或指定專人辦理。
 
-* 91 明知為偽造或仿造有專利權之發明品而販賣，或意圖販賣而陳列，或自國外輸入者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
+> 釋：一、本條新增。二、參照七十四年十一月二十九日公布之商標法第六十六條之二規定，法院得設處理專利案件之專業法庭，以利訴訟之進行。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或二千元以下罰金」修正為「或科或併科五千元以下罰金」；並將「外國」二字修正為「國外」，以應需要。
+* 89 偽造有專利權之發明品者，處三年以下有期徒刑、拘役或科或併科十萬元以下罰金。
 
-* 92 違反第七十四條之規定者，處六個月以下有期徒刑、拘役或科或併科三千元以下罰金。
+> 釋：本法現行規定之罰金數額，係六十八年修正所定者，惟目前經濟情況已有變更，現行罰金數額偏低，不足以達成法律上之目的，爰斟酌實際情形，將本條罰金上限，予以提高。
 
-> 釋：為防杜專利權人登載不實之廣告使人對請准專利範圍發生誤認，且因違反本法第七十四條登載不實廣告者，係經濟性犯罪型態，爰將原訂罰金「或一千元以下罰金」修正為「或科或併科三千元以下罰金」。
+* 90 仿造有專利權之發明品或竊用其方法者，處二年以下有期徒刑、拘役或科或併科五萬元以下罰金。
+
+> 釋：提高罰金上限，理由同第八十九條說明。
+
+* 91 明知為偽造或仿造有專利權之發明品而販賣，或意圖販賣而陳列，或自國外輸入者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
+
+> 釋：提高罰金上限，理由同第八十九條說明。
+
+* 92 違反第七十四條之規定者，處六月以下有期徒刑、拘役或科或併科一萬元以下罰金。
+
+> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
 
 * 93 本法第八十九條至第九十一條之罪，須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
 
@@ -254,7 +290,9 @@
 
 > 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改自審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
 
-* 100 新型，先經申請發明或新式樣專利改請新型專利者，得以申請發明或新式樣專利之日，作為申請新型專利之日。但在發明或新式樣專利案審定書送達之日起，一個月後申請者，不在此限。
+* 100 先經申請發明或新式樣專利改請新型專利者，得請求以申請發明或新式樣專利之日，作為申請新型專利之日。但在發明或新式樣專利申請案審定書送達之日起一個月後改請者，不在此限。
+
+> 釋：文字修正。將本條所指審定書，限於主管機關對申請案所為之審定書，不含其他對異議案、舉發案所為決定而成之文書。
 
 * 101 公告中之新型，任何人認有違反第九十五條至第九十七條之規定，或利害關係人認有不合第十二條之規定者，得自公告之日起三個月內，備具申請書，附具證件，向專利局提起異議，請求再審查。
 
@@ -264,33 +302,37 @@
 
 * 103 專利權人，得以其新型有限制或無限制讓與他人或租與他人實施。
 
-* 104 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反本法第九十五條至第九十七條之規定者。二、新型專利權人，為非新型專利申請權人者。三、說明書或圖說，故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、同一新型之說明書與曾在外國申請時之說明書內容不同者。
+* 104 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反第九十五條至第九十七條之規定者。二、新型專利權人，為非新型專利申請權人者。三、說明書或圖式，故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。
 
-* 105 核准專利之新型，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後應於屆期前繳納之。
+> 釋：刪除第四款，修正理由同第六十條，並刪除第一款「本法」二字及修正第三款之圖說為圖式。
 
-> 釋：一、有關專利年費之金額，已併定於第七十五條而第一百十條並有準用之規定，爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際故修正之。
+* 105 新型專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納，第二年以後應於屆期前繳納之。
 
-* 106 偽造有專利權之新型者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
+> 釋：明定第一年新型專利年費由專利局通知申請人限期繳納，並酌作文字修正，修正理由同第七十六條。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「三千元以下」，提高為「一萬元以下」。
+* 106 偽造有專利權之新型者，處二年以下有期徒刑、拘役或科或併科五萬元以下罰金。
 
-* 107 仿造有專利權之新型者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
+> 釋：提高罰金上限，理由同第八十九條說明。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「二千元以下」提高為「五千元以下」。
+* 107 仿造有專利權之新型者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
 
-* 108 明知為偽造或仿造有專利權之新型而販賣，或意圖販賣而陳列，或自國外輸入者，處六個月以下有期徒刑、拘役或科或併科三千元以下罰金。
+> 釋：提高罰金上限，理由同第八十九條說明。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或一千元以下罰金」修正為「或科或併科三千元以下罰金」，並將「外國」二字修正為「國外」，以應需要。
+* 108 明知為偽造或仿造有專利權之新型而販賣，或意圖販賣而陳列，或自國外輸入者，處六月以下有期徒刑、拘役或科或併科一萬元以下罰金。
+
+> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
 
 * 109 前三條之罪須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
 
-* 110 第七條至第二十條、第二十三條至第三十一條、第三十三條至第四十一條、第四十三條、第四十四條、第四十六條至第五十四條、第五十六條、第五十八條、第五十九條、第六十一條至第六十六條、第七十二條至第七十五條、第七十八條、第七十九條、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新型準用之。
+* 110 第七條至第二十條、第二十三條至第三十一條、第三十三條至第四十一條、第四十三條、第四十四條、第四十六條至第五十四條、第五十六條、第五十八條、第五十九條、第六十一條至第六十六條、第七十二條至第七十五條、第七十八條、第七十九條、第八十一條至第八十五條、第八十六條至第八十八條之二、第九十二條及第九十四條之規定，於新型準用之。
 
-> 釋：原列準用之第八十條第一款至第三款業經修正刪除，爰予配合修正。
+> 釋：配合第八十五條之一、第八十八條之一之增訂而增列第二章準用條文。
 
 * 111 凡對於物品之形狀花紋或色彩首先創作，適於美感之新式樣者，得依本法申請專利。
 
-* 112 本法所稱新式樣，謂無左列情事之一者：一、申請前有相同或近似之新式樣，已見於刊物或已在國內公開使用者。二、有相同或近似之新型或新式樣，核准專利在先者。近似之新式樣屬於同一人者，為聯合新式樣，不受前項第二款之限制。
+* 112 本法所稱新式樣，謂無左列情事之一者：一、申請前有相同或近似之新式樣，已見於刊物或已公開使用者。二、有相同或近似之新型或新式樣，核准專利在先者。近似之新式樣屬同一人者，為聯合新式樣，不受前項第二款之限制。
+
+> 釋：一、依現行第一項第一款之規定，須在國內公開使用者，始非專利法所稱之新式樣，本次修正擴張公開使用之範圍及於在國外公開使用之情形，爰刪除第一項第一款「在國內」三字。二、第一項第二款及第二項未修正。
 
 * 113 左列物品不予新式樣專利：一、妨害公共秩序善良風俗或衛生者。二、相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
 
@@ -298,9 +340,13 @@
 
 > 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改為審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
 
-* 115 新式樣先經申請新型專利改請新式樣專利者，得以申請新型或新式樣專利之日，作為申請新式樣專利之日。但在新型專利案審定書送達之日起一個月後申請者，不在此限。
+* 115 先經申請新型專利改請新式樣專利者，得請求以申請新型專利之日，作為申請新式樣專利之日。但在新型專利申請案審定書送達之日起一個月後改請者，不在此限。
 
-* 116 以新式樣申請專利，由創作人或其受讓人或繼承人備具申請書、圖說及宣誓書，向專利局申請之。
+> 釋：將「新型專利案審定書」修正為「新型專利申請案審定書」，修正理由同第一百條說明。
+
+* 116 以新式樣申請專利，由創作人或其受讓人或繼承人備具申請書、圖說及宣誓書，向專利局申請之。圖說應載明申請專利範圍。
+
+> 釋：增訂圖說應載明申請專利範圍之規定，理由同第十二條說明一。
 
 * 117 以新式樣申請專利，應指定所使用新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
 
@@ -314,31 +360,33 @@
 
 * 121 專利權人得就所指定使用之物品，以其新式樣讓與他人，但聯合新式樣不得分析讓與。
 
-* 122 專利權人對於請准新式樣專利之圖說等，有左列情事之一時，得向專利局請求更正：一、申請範圍之縮減。二、誤記之事項。前項更正，經專利局核准後應公告之。
+* 122 專利權人對於請准新式樣專利之圖說等，有左列情事之一時，得向專利局請求更正：一、申請範圍之縮減。二、誤記之事項。前項更正，專利局於核准後，應將其事由刊載專利公報。
+
+> 釋：修正第二項，理由同第五十六條。
 
 * 123 有左列情事之一者，應撤銷其新式樣專利權，並追繳證書：一、違反本法第一百十一條至第一百十三條之規定者。二、新式樣專利權人，為非新式樣專利申請權人者。
 
-* 124 核准專利之新式樣，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後，應於屆期前繳納之。
+* 124 新式樣專利年費自公告之日起算，第一年應於專利權審查確定後，由專利局通知申請人限期繳納；第二年以後應於屆期前繳納之。
 
-> 釋：一、有關專利年費之金額，已併定於第七十五條，而第一百二十九條並有準用之規定，本條第一項爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際，爰修正之。
+> 釋：明定第一年新式樣專利年費由專利局通知申請人限期繳納，並酌作文字修正，理由同第七十六條說明。
 
-* 125 偽造有新式樣專利權之物品者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
+* 125 偽造有新式樣專利權之物品者，處一年以下有期徒刑、拘役或科或併科二萬元以下罰金。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「一千元以下」，提高為「五千元以下」。
+> 釋：提高罰金上限，理由同第八十九條說明。
 
-* 126 仿造有新式樣專利權之物品者，處六個月以下有期徒刑、拘役或科或併科二千元以下罰金。
+* 126 仿造有新式樣專利權之物品者，處六個月以下有期徒刑、拘役或科或併科一萬元以下罰金。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「五百元以下」，提高為「二千元以下」。
+> 釋：一、提高罰金上限，理由同第八十九條說明。二、「六個月以下」修正為「六月以下」。
 
-* 127 明知為偽造或仿造有新式樣專利權之物品而販賣，或意圖販賣而陳列，或自國外輸入者，處拘役或科或併科一千元以下罰金。
+* 127 明知為偽造或仿造有新式樣專利權之物品而販賣，或意圖販賣而陳列，或自國外輸入者，處拘役或科或併科五千元以下罰金。
 
-> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或三百元以下罰金」修正為「或科或併科一千元以下罰金」；並將「外國」二字修正為「國外」，以應需要。
+> 釋：提高罰金上限，理由同第八十九條說明。
 
 * 128 前三條之罪，須告須乃論，其告訴應自得知被侵害之日起一年內為之。
 
-* 129 第七條、第十條、第十一條、第十二條第二項、第十三條至第十五條、第十七條至第二十條、第二十四條至第三十一條、第三十三條、第三十四條、第三十七條至第三十九條、第四十一條、第四十四條、第四十七條至第五十四條、第五十八條、第五十九條、第六十一條至第六十三條、第六十五條、第六十六條、第七十三條至七十五條、第七十八條、第七十九條、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新式樣準用之。
+* 129 第七條、第十條、第十一條、第十二條第二項、第三項、第十三條至第十五條、第十七條至第二十條、第二十四條至第三十一條、第三十三條、第三十四條、第三十七條至第三十九條、第四十一條、第四十四條、第四十七條至第五十四條、第五十八條、第五十九條、第六十一條至第六十三條、第六十五條、第六十六條、第七十三條至第七十五條、第七十八條、第七十九條、第八十一條至第八十五條、第八十六條至第八十八條之二、第九十二條及第九十四條之規定，於新式樣準用之。
 
-> 釋：因原列準用之第八十條第一款至第三款業經修正刪除，爰予配合修正。
+> 釋：配合第十二條第三項、第八十五條之一及第八十八條之一之增訂而增列第三章準用條文。
 
 * 130 本法施行細則，由經濟部定之。
 
