--- a/司法-民事/票據法.md
+++ b/司法-民事/票據法.md
@@ -386,9 +386,9 @@
 
 > 釋：因支票具有見票即付性，匯票分期付款之規定，於支票自不適用，故增列排除第六十五條第二項準用之規定。並將「第二十五條第二項」列為準用之一以求周密。
 
-* 144.1 第一百四十一條、第一百四十二條之施行期限至中華民國七十五年十二月三十一日屆滿。在施行期限內之犯罪，仍依行為時法律追訴處罰，不適用刑法第二條之規定。但發票人於辯論終結前清償支票金額之一部或全部者，減輕或免除其刑。
+* 144.1 （刪除）
 
-> 釋：一、本條新增。二、現行規定對無詐欺犯意之空頭支票發票人科以刑罰制裁，致債權人樂於收受支票之不正常現象。甚至以遠期支票替代匯票、本票之使用，造成票據犯罪案件之激增。為確實達致支票發票人憑具資金及信用簽發支票之目的，宜將有關規定廢除。三、由於現行刑罰規定行之有年，驟然取銷，可能造成社會經濟重大衝擊，為使國人有相當期間得以瞭解新法內容，從容因應，爰於本條規定第一百四十一條、第一百四十二條之失效日期。惟原日期訂為民國七十四年十二月三十一日，已屬過去，而本院審議期間，曾經大眾傳播工具廣為宣傳，國人對票據法修正內容已有相當瞭解，故其緩衝期間當酌予縮短，較為允當，爰將失效日期修正為七十五年十二月三十一日。四、由於第一百四十一條及第一百四十二條之刪除有刑法第二條之適用，為避免過渡期間產生取巧現象，爰作除外規定，以杜僥倖。五、為緩和支票刑罰廢止前後之重大差異，對於支票發票人於退票後設法清償票款者，亦當兼顧其情，以符廢止支票刑罰之良法美意，爰增列但書規定，以擴大廢止支票刑罰之適用範圍，並兼顧支票執票人之受償機會，發揮廢止支票刑罰之積極意義。
+> 釋：為了貫徹支票刑罰廢止之政策，促使單純票據犯之問題一舉解決，故予以刪除。
 
 * 145 本法施行細則，由行政院定之。
 
